# barbarapp

./: .gitignore  Dockerfile  README.md  Taskfile.yml  app.py  main.py  pyproject.toml  requirements.txt  run_checks.sh
app_pages/: admin.py  audit.py  calendar.py  home.py  profile.py
data/: data.db
libs/: auth.py  csv_utils.py  db.py
views/: admin.py  audit.py  calendar.py  login.py  profile.py
